# thi_robothon_grand_challenge

./: CMakeLists.txt  README.md  package.xml
config/: params_vision.yaml
launch/: box_dedection.launch.py
src/: example_opencv_colormask.cpp  example_opencv_contours.cpp
